# crate-installs-notifier

./: Cargo.toml  README.md  com.voider1.crate-installs-notifier.plist
src/: config.rs  main.rs
