[package]
name = "crate-installs-notifier"
version = "0.1.0"
authors = ["voider1 <wesleyey0408@gmail.com>"]

[dependencies]
error-chain = "0.11.0"
futures = "0.1"
mac-notification-sys = "0.1.3"
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = ["unstable"], rev = "a646bb5" }
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"
serde_json = "1.0.3"
tokio-core = "0.1"
